--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <!-- <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
   <title>Pool game</title>
 </head>
 <body>
-  <canvas id="screen" width="2000" height="800"></canvas>
+  <canvas id="screen" width="1500" height="825"></canvas>
   <script src="Canvas.js"></script>
+  <script src="Assets.js"></script>
+  <script src="Stick.js"></script>
+  <script src="Game.js"></script>
+  <script src="GameWorld.js"></script>
+  <script>
+    loadAssets (PoolGame.start)
+  </script>
   
 </body>
 </html>
